--- a/secciones/slowfashion.html
+++ b/secciones/slowfashion.html
@@ -1,199 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <title>Slow Fashion</title>
-  </head>
 
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"
-            ><img src="../imagenes/logo-sin-fondo.png" alt=""
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./nosotros.html">Nosotras</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./slowfashion.html">Slow Fashion</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Productos
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li>
-                    <a class="dropdown-item" href="./sweaters.html">Sweaters</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="./vestidos.html">Vestidos</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="./camisas.html">Camisas</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="./faldas.html">Faldas</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="./jeans.html">Jeans</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="./contacto.html"
-                  tabindex="-1"
-                  aria-disabled="true"
-                  >Contacto</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap" rel="stylesheet" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="../styles/style.css" />
+  <title>Slow Fashion</title>
+</head>
 
-    <main>
-      <section class="main-slow">
-        <h1 class="slow-title">Que es Slow Fashion?</h1>
-        <article class="slow1">
-          <img src="../imagenes/slow-fashion-main.jpg" />
-          <p>
-            Abarca una conciencia y un enfoque de la moda que tiene en cuenta
-            los procesos y los recursos necesarios para fabricar la ropa. Aboga
-            por la compra de prendas de mejor calidad que duren más tiempo, y
-            valora el trato justo de las personas, los animales y el planeta a
-            lo largo del proceso. La slow fashion y la moda sostenible o ética
-            tienen muchas similitudes. Son movimientos hermanos y siguen las
-            mismas directrices generales. La principal diferencia con la slow
-            fashion es que se centra en reducir el consumo y la producción de
-            forma más específica.
-          </p>
-        </article>
-        <article class="slow2">
-          <h2 class="slow-title">Los inicios de la slow fashion</h2>
-          <p>
-            En la última década se ha producido una oleada de cambios en la
-            industria de la moda. Cada vez son más las marcas que rechazan los
-            principios de la moda rápida y optan por un enfoque más sostenible
-            en la confección de prendas.La slow fashion se opone al modelo de
-            moda rápida que surgió hace unos 20 años, en el que la ropa se
-            abarató y los ciclos de las tendencias se aceleraron. Algunas marcas
-            muy conocidas queman muchas toneladas de prendas no vendidas al año,
-            a pesar de los continuos esfuerzos de sostenibilidad para cerrar el
-            círculo de la moda, está claro que esta filosofía es una parte
-            necesaria del movimiento en su conjunto.
-          </p>
-          <article class="slow-caract">
-            <h2 class="slow-title">
-              Caracteristicas el movimiento Slow Fashion
-            </h2>
-            <div class="slow-li">
-              <ul>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="" /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./nosotros.html">Nosotras</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./slowfashion.html">Slow Fashion</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Productos
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  Se fabrica con materiales sostenibles de alta calidad, como el
-                  lino o el algodón ecológico
-                </li>
-                <li>Las prendas son más atemporales que modernas</li>
-                <li>
-                  Suelen venderse en pequeñas tiendas (locales) en lugar de en
-                  grandes cadenas.
-                </li>
-                <li>Prendas de origen, producción y venta local</li>
-                <li>
-                  Pocos estilos específicos por colección, que se lanzan dos o
-                  máximo tres veces al año, o una colección permanente sin
-                  temporada
+                  <a class="dropdown-item" href="./sweaters.html">Sweaters</a>
                 </li>
                 <li>
-                  A menudo se fabrican por encargo para reducir la producción
-                  innecesario
+                  <a class="dropdown-item" href="./vestidos.html">Vestidos</a>
                 </li>
                 <li>
-                  Se respetan los derechos de sus empleados y productores, a
-                  través de salarios y condiciones de trabajo justas.
+                  <a class="dropdown-item" href="./camisas.html">Camisas</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./faldas.html">Faldas</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./jeans.html">Jeans</a>
                 </li>
               </ul>
-              <div><img src="../imagenes/slow-main-ul.jpg" alt="" /></div>
-            </div>
-          </article>
-          <div class="slow-fin">
-            <p>
-              Cuando reutilizamos ropa, estamos aprovechando al máximo los
-              recursos con los que esta fue fabricada. Esto, además, te permite
-              incorporar prendas vintage originales y atemporales dando un toque
-              de estilo a tu imagen.
-            </p>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="main-slow">
+      <h1 class="slow-title">Que es Slow Fashion?</h1>
+      <article class="slow1">
+        <img data-aos="fade-down" data-aos-duration="2000" src="../imagenes/slow-fashion-main.jpg" />
+        <p>
+          Abarca una conciencia y un enfoque de la moda que tiene en cuenta
+          los procesos y los recursos necesarios para fabricar la ropa. Aboga
+          por la compra de prendas de mejor calidad que duren más tiempo, y
+          valora el trato justo de las personas, los animales y el planeta a
+          lo largo del proceso. La slow fashion y la moda sostenible o ética
+          tienen muchas similitudes. Son movimientos hermanos y siguen las
+          mismas directrices generales. La principal diferencia con la slow
+          fashion es que se centra en reducir el consumo y la producción de
+          forma más específica.
+        </p>
+      </article>
+      <article class="slow2">
+        <h2 class="slow-title">Los inicios de la slow fashion</h2>
+        <p>
+          En la última década se ha producido una oleada de cambios en la
+          industria de la moda. Cada vez son más las marcas que rechazan los
+          principios de la moda rápida y optan por un enfoque más sostenible
+          en la confección de prendas.La slow fashion se opone al modelo de
+          moda rápida que surgió hace unos 20 años, en el que la ropa se
+          abarató y los ciclos de las tendencias se aceleraron. Algunas marcas
+          muy conocidas queman muchas toneladas de prendas no vendidas al año,
+          a pesar de los continuos esfuerzos de sostenibilidad para cerrar el
+          círculo de la moda, está claro que esta filosofía es una parte
+          necesaria del movimiento en su conjunto.
+        </p>
+        <article class="slow-caract">
+          <h2 class="slow-title">
+            Caracteristicas el movimiento Slow Fashion
+          </h2>
+          <div class="slow-li">
+            <ul>
+              <li>
+                Se fabrica con materiales sostenibles de alta calidad, como el
+                lino o el algodón ecológico
+              </li>
+              <li>Las prendas son más atemporales que modernas</li>
+              <li>
+                Suelen venderse en pequeñas tiendas (locales) en lugar de en
+                grandes cadenas.
+              </li>
+              <li>Prendas de origen, producción y venta local</li>
+              <li>
+                Pocos estilos específicos por colección, que se lanzan dos o
+                máximo tres veces al año, o una colección permanente sin
+                temporada
+              </li>
+              <li>
+                A menudo se fabrican por encargo para reducir la producción
+                innecesario
+              </li>
+              <li>
+                Se respetan los derechos de sus empleados y productores, a
+                través de salarios y condiciones de trabajo justas.
+              </li>
+            </ul>
+            <div><img src="../imagenes/slow-main-ul.jpg" alt="" /></div>
           </div>
         </article>
-      </section>
-    </main>
+        <div class="slow-fin">
+          <p>
+            Cuando reutilizamos ropa, estamos aprovechando al máximo los
+            recursos con los que esta fue fabricada. Esto, además, te permite
+            incorporar prendas vintage originales y atemporales dando un toque
+            de estilo a tu imagen.
+          </p>
+        </div>
+      </article>
+    </section>
+  </main>
 
-    <footer class="footer">
-      <i class="bi bi-whatsapp"></i>
-      <i class="bi bi-instagram"></i>
-      <i class="bi bi-facebook"></i>
-    </footer>
+  <footer class="footer">
+    <i class="bi bi-whatsapp"></i>
+    <i class="bi bi-instagram"></i>
+    <i class="bi bi-facebook"></i>
+  </footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+</body>
+
 </html>
