--- a/secciones/camisas.html
+++ b/secciones/camisas.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords"
+    content="moda cicular, moda sustentable, slow fashion, ropa vintage, ropero de ana, moda, moda ecologica, moda 3 r, outfit vintage, feria americana" />
+  <meta name="description" content="Conoce nuestras hermosas camisas" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
@@ -20,7 +23,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="" /></a>
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="logo ropero" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -75,7 +78,7 @@
       <div class="container">
         <div class="row">
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/camisa-1.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/camisa-1.jpg" class="card-img-top" alt="Camisa con mangas de colores" />
             <div class="card-body">
               <h5 class="card-title">Camisa con mangas de colores</h5>
               <p class="card-text">
@@ -86,7 +89,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/camisa-2.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/camisa-2.jpg" class="card-img-top" alt="Camisa estampado psicodélic" />
             <div class="card-body">
               <h5 class="card-title">Camisa estampado psicodélico.</h5>
               <p class="card-text">
@@ -96,7 +99,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/camisa-3.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/camisa-3.jpg" class="card-img-top" alt="Camisa con estampado fluo" />
             <div class="card-body">
               <h5 class="card-title">Camisa con estampado fluo</h5>
               <p class="card-text">
@@ -106,7 +109,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/camisa-4.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/camisa-4.jpg" class="card-img-top" alt="Camisa con dibujos geométrico" />
             <div class="card-body">
               <h5 class="card-title">Camisa con dibujos geométricos</h5>
               <p class="card-text">
@@ -117,7 +120,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/camisa-5.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/camisa-5.jpg" class="card-img-top" alt="Camisa con hombreras" />
             <div class="card-body">
               <h5 class="card-title">Camisa con hombreras</h5>
               <p class="card-text">
@@ -127,7 +130,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/camisa-6.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/camisa-6.jpg" class="card-img-top" alt="Camisa cuello smoking" />
             <div class="card-body">
               <h5 class="card-title">Camisa cuello smoking</h5>
               <p class="card-text">
@@ -137,7 +140,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/camisa-7.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/camisa-7.jpg" class="card-img-top" alt="Camisa estampada" />
             <div class="card-body">
               <h5 class="card-title">Camisa estampada</h5>
               <p class="card-text">
@@ -147,7 +150,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/camisa-8.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/camisa-8.jpg" class="card-img-top" alt="Camisa de jean" />
             <div class="card-body">
               <h5 class="card-title">Camisa de jean</h5>
               <p class="card-text">
