--- a/secciones/faldas.html
+++ b/secciones/faldas.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords"
+    content="moda cicular, moda sustentable, slow fashion, ropa vintage, ropero de ana, moda, moda ecologica, moda 3 r, outfit vintage, feria americana" />
+  <meta name="description" content="Conoce nuestras bellas faldas" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
@@ -20,7 +23,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="" /></a>
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="logo ropero" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -75,7 +78,7 @@
       <div class="container">
         <div class="row">
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/faldas-1.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/faldas-1.jpg" class="card-img-top" alt="Falda negra con cintas." />
             <div class="card-body">
               <h5 class="card-title">Falda negra con cintas.</h5>
               <p class="card-text">
@@ -86,7 +89,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/faldas-2.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/faldas-2.jpg" class="card-img-top" alt="Falda escocesa" />
             <div class="card-body">
               <h5 class="card-title">Falda escocesa</h5>
               <p class="card-text">
@@ -96,7 +99,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/faldas-3.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/faldas-3.jpg" class="card-img-top" alt="Falda entablada" />
             <div class="card-body">
               <h5 class="card-title">Falda entablada</h5>
               <p class="card-text">
@@ -106,7 +109,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/faldas-4.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/faldas-4.jpg" class="card-img-top" alt="Falda a cuadros" />
             <div class="card-body">
               <h5 class="card-title">Falda a cuadros</h5>
               <p class="card-text">
@@ -117,7 +120,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/faldas-5.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/faldas-5.jpg" class="card-img-top" alt="Falda acampanada" />
             <div class="card-body">
               <h5 class="card-title">Falda acampanada</h5>
               <p class="card-text">
@@ -128,7 +131,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/faldas-6.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/faldas-6.jpg" class="card-img-top" alt="Falda de jean" />
             <div class="card-body">
               <h5 class="card-title">Falda de jean</h5>
               <p class="card-text">
@@ -138,7 +141,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/faldas-7.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/faldas-7.jpg" class="card-img-top" alt="Falda estampada" />
             <div class="card-body">
               <h5 class="card-title">Falda estampada</h5>
               <p class="card-text">
@@ -149,7 +152,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/faldas-8.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/faldas-8.jpg" class="card-img-top" alt="Falda negra" />
             <div class="card-body">
               <h5 class="card-title">Falda negra</h5>
               <p class="card-text">
