--- a/secciones/jeans.html
+++ b/secciones/jeans.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />}
+  <meta name="keywords"
+    content="moda cicular, moda sustentable, slow fashion, ropa vintage, ropero de ana, moda, moda ecologica, moda 3 r, outfit vintage, feria americana" />
+  <meta name="description" content="Conoce nuestras jeans" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
@@ -20,7 +23,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="" /></a>
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="logo ropero" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -75,7 +78,7 @@
       <div class="container">
         <div class="row">
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/jeans-1.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/jeans-1.png" class="card-img-top" alt="Jardinero rayado" />
             <div class="card-body">
               <h5 class="card-title">Jardinero rayado</h5>
               <p class="card-text">
@@ -85,7 +88,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/jeans-2.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/jeans-2.png" class="card-img-top" alt="Jardinero de jean" />
             <div class="card-body">
               <h5 class="card-title">Jardinero de jean</h5>
               <p class="card-text">
@@ -96,7 +99,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/jeans-3.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/jeans-3.png" class="card-img-top" alt="Jean gastado" />
             <div class="card-body">
               <h5 class="card-title">Jean gastado</h5>
               <p class="card-text">
@@ -106,7 +109,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/jeans-4.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/jeans-4.png" class="card-img-top" alt="Jean Nevado" />
             <div class="card-body">
               <h5 class="card-title">Jean Nevado</h5>
               <p class="card-text">
@@ -116,7 +119,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/jeans-5.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/jeans-5.png" class="card-img-top" alt="Jean prelavado" />
             <div class="card-body">
               <h5 class="card-title">Jean prelavado</h5>
               <p class="card-text">
@@ -126,7 +129,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/jeans-6.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/jeans-6.png" class="card-img-top" alt="Jean clásico" />
             <div class="card-body">
               <h5 class="card-title">Jean clásico</h5>
               <p class="card-text">
@@ -136,7 +139,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/jeans-7.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/jeans-7.png" class="card-img-top" alt="Jean oversize" />
             <div class="card-body">
               <h5 class="card-title">Jean oversize</h5>
               <p class="card-text">
@@ -146,7 +149,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/jeans-8.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/jeans-8.png" class="card-img-top" alt="Jean combinado" />
             <div class="card-body">
               <h5 class="card-title">Jean combinado</h5>
               <p class="card-text">
