--- a/secciones/slowfashion.html
+++ b/secciones/slowfashion.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords"
+    content="moda cicular, moda sustentable, slow fashion, ropa vintage, ropero de ana, moda, moda ecologica, moda 3 r, outfit vintage, feria americana" />
+  <meta name="description"
+    content="Te explicamos en que consiste la filosofia del slow fashion y la moda sustentable" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
@@ -21,7 +25,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="" /></a>
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="logo ropero" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -73,7 +77,8 @@
     <section class="main-slow">
       <h1 class="slow-title">Que es Slow Fashion?</h1>
       <article class="slow1">
-        <img data-aos="fade-down" data-aos-duration="2000" src="../imagenes/slow-fashion-main.jpg" />
+        <img data-aos="fade-down" data-aos-duration="2000" src="../imagenes/slow-fashion-main.jpg"
+          alt="imagen perchero" />
         <p>
           Abarca una conciencia y un enfoque de la moda que tiene en cuenta
           los procesos y los recursos necesarios para fabricar la ropa. Aboga
@@ -130,7 +135,7 @@
                 través de salarios y condiciones de trabajo justas.
               </li>
             </ul>
-            <div><img src="../imagenes/slow-main-ul.jpg" alt="" /></div>
+            <div><img src="../imagenes/slow-main-ul.jpg" alt="foto perchero" /></div>
           </div>
         </article>
         <div class="slow-fin">
