--- a/secciones/vestidos.html
+++ b/secciones/vestidos.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords"
+    content="moda cicular, moda sustentable, slow fashion, ropa vintage, ropero de ana, moda, moda ecologica, moda 3 r, outfit vintage, feria americana" />
+  <meta name="description" content="Conoce nuestros vestidos" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
@@ -20,7 +23,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="" /></a>
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="logo ropero" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -76,7 +79,7 @@
       <div class="container">
         <div class="row">
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/vestido-1.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/vestido-1.png" class="card-img-top" alt="Solera escocesa azul" />
             <div class="card-body">
               <h5 class="card-title">Solera escocesa azul</h5>
               <p class="card-text">
@@ -87,7 +90,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/vestido-2.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/vestido-2.png" class="card-img-top" alt="Solera escocesa acampanada" />
             <div class="card-body">
               <h5 class="card-title">Vestido escoces</h5>
               <p class="card-text">
@@ -97,7 +100,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/vestido-3.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/vestido-3.png" class="card-img-top" alt="Jardinera de jean" />
             <div class="card-body">
               <h5 class="card-title">Jardinera de jean Degrade</h5>
               <p class="card-text">
@@ -107,7 +110,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/vestido-4.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/vestido-4.png" class="card-img-top" alt="Jardinera de gabardina" />
             <div class="card-body">
               <h5 class="card-title">Jardinera de gabardina Negra</h5>
               <p class="card-text">
@@ -117,7 +120,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/vestidoEscoces.jpeg" class="card-img-top" alt="..." />
+            <img src="../imagenes/vestidoEscoces.jpeg" class="card-img-top" alt="vestido jumper" />
             <div class="card-body">
               <h5 class="card-title">Vestido escoces</h5>
               <p class="card-text">
@@ -127,7 +130,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/vestido-6.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/vestido-6.png" class="card-img-top" alt="Vestido Floreado" />
             <div class="card-body">
               <h5 class="card-title">Vestido Floreado</h5>
               <p class="card-text">
@@ -137,7 +140,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/vestido-7.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/vestido-7.png" class="card-img-top" alt=">Vestido negro" />
             <div class="card-body">
               <h5 class="card-title">Vestido negro con flores</h5>
               <p class="card-text">
@@ -147,7 +150,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/vestido-8.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/vestido-8.png" class="card-img-top" alt="Vestido estampado." />
             <div class="card-body">
               <h5 class="card-title">Vestido estampado</h5>
               <p class="card-text">
