--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords"
+    content="moda cicular, moda sustentable, slow fashion, ropa vintage, ropero de ana, moda, moda ecologica, moda 3 r, outfit vintage, feria americana" />
+  <meta name="description" content="Entra al ropero de Ana y conoce la mejor moda sustentable" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
@@ -13,16 +16,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
   <link rel="stylesheet" href="./styles/style.css" />
-  <title>Proyecto Mariana</title>
+  <title>El Ropero de Ana</title>
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="./imagenes/logo-sin-fondo.png" alt="" /></a>
+        <a class="navbar-brand" href="#"><img src="./imagenes/logo-sin-fondo.png" alt="logo ropero" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -72,7 +75,7 @@
   <main>
     <section class="main">
       <figure>
-        <img data-aos="flip-up" class="imagenBanner" src="./imagenes/banner-index.jpg" />
+        <img data-aos="flip-up" class="imagenBanner" src="./imagenes/banner-index.jpg" alt="foto banner" />
       </figure>
     </section>
   </main>
@@ -134,6 +137,8 @@
     <i class="bi bi-instagram"></i>
     <i class="bi bi-facebook"></i>
   </footer>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
     crossorigin="anonymous"></script>
