--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords"
+    content="moda cicular, moda sustentable, slow fashion, ropa vintage, ropero de ana, moda, moda ecologica, moda 3 r, outfit vintage, feria americana" />
+  <meta name="description" content="Te contamos quienes somos las creadoras del ropero de Ana" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
@@ -22,7 +25,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="" /></a>
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="logo ropero" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -69,11 +72,9 @@
       </div>
     </nav>
   </header>
-  <h3 class="tituloSecundario">
-    Crecimos en los 90's y nos encanta el estilo!
-  </h3>
+  <h3 class="tituloSecundario">Crecimos en los 90's y nos encanta el estilo!</h3>
   <div class="nosotras">
-    <img data-aos="fade-right" data-aos-duration="3000" src="../imagenes/nosotras.png" />
+    <img data-aos="fade-right" data-aos-duration="3000" src="../imagenes/nosotras.png" alt="foto nosotras" />
     <div data-aos="fade-left" data-aos-duration="3000" class="nosotras-text">
       <p>
         Somos 2 hermanas entusiastas, que heredamos la aguda mirada del estilo
