--- a/secciones/sweaters.html
+++ b/secciones/sweaters.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords"
+    content="moda cicular, moda sustentable, slow fashion, ropa vintage, ropero de ana, moda, moda ecologica, moda 3 r, outfit vintage, feria americana" />
+  <meta name="description" content="Conoce nuestros sweaters" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
@@ -20,7 +23,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="" /></a>
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logo-sin-fondo.png" alt="logo ropero" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -76,7 +79,7 @@
       <div class="container">
         <div class="row">
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/sweter-1-.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/sweter-1-.png" class="card-img-top" alt="sweater blanco" />
             <div class="card-body">
               <h5 class="card-title">Sweater con guarda de colores</h5>
               <p class="card-text">
@@ -86,7 +89,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/sweater-2.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/sweater-2.png" class="card-img-top" alt="swaeter nike" />
             <div class="card-body">
               <h5 class="card-title">Sweater Nike</h5>
               <p class="card-text">
@@ -96,7 +99,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/sweater-3.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/sweater-3.png" class="card-img-top" alt="sweater celeste" />
             <div class="card-body">
               <h5 class="card-title">Sweater lana Merino</h5>
               <p class="card-text">
@@ -106,7 +109,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/sweater-4.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/sweater-4.jpg" class="card-img-top" alt="sweater multicolor" />
             <div class="card-body">
               <h5 class="card-title">Sweater de colores</h5>
               <p class="card-text">Noventoso. Colorido y canchero.</p>
@@ -114,7 +117,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/sweater-5.jpg" class="card-img-top" alt="..." />
+            <img src="../imagenes/sweater-5.jpg" class="card-img-top" alt="seater jazzy" />
             <div class="card-body">
               <h5 class="card-title">Sweater con dibujo</h5>
               <p class="card-text">
@@ -124,7 +127,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/sweater-6.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/sweater-6.png" class="card-img-top" alt="swater rombos" />
             <div class="card-body">
               <h5 class="card-title">Sweater con rombos</h5>
               <p class="card-text">
@@ -134,7 +137,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/sweater-7.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/sweater-7.png" class="card-img-top" alt="campera de colores" />
             <div class="card-body">
               <h5 class="card-title">Campera de colores</h5>
               <p class="card-text">Campera colorida estilo deportivo.</p>
@@ -142,7 +145,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <img src="../imagenes/sweater-8.png" class="card-img-top" alt="..." />
+            <img src="../imagenes/sweater-8.png" class="card-img-top" alt="sweater geometrico" />
             <div class="card-body">
               <h5 class="card-title">Sweater con dibujos geométricos</h5>
               <p class="card-text">Sweater retro con dibujoss geométricos.</p>
