--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
           <div class="link">Ver más</div>
         </a>
       </div>
-      <img src="./imagenes/fotosf-3.jpg" alt="trama-sweater" />
+      <div class="img-circ">
+        <img src="./imagenes/fotosf-3.jpg" alt="trama-sweater" />
+      </div>
     </article>
   </section>
 
