--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="./secciones/nosotros.html">Nosotras</a>
             </li>
             <li class="nav-item">
@@ -135,9 +132,9 @@
   </section>
 
   <footer class="footer">
-    <i class="bi bi-whatsapp"></i>
-    <i class="bi bi-instagram"></i>
-    <i class="bi bi-facebook"></i>
+    <a href="https://www.whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
+    <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
+    <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
   </footer>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
