--- a/secciones/slowfashion.html
+++ b/secciones/slowfashion.html
@@ -33,9 +33,6 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="./nosotros.html">Nosotras</a>
             </li>
             <li class="nav-item">
@@ -151,9 +148,9 @@
   </main>
 
   <footer class="footer">
-    <i class="bi bi-whatsapp"></i>
-    <i class="bi bi-instagram"></i>
-    <i class="bi bi-facebook"></i>
+    <a href="https://www.whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
+    <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
+    <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
